--- a/Models/Diffusion/2024.06.17_DiTTo-TTS.md
+++ b/Models/Diffusion/2024.06.17_DiTTo-TTS.md
@@ -60,12 +60,12 @@
 
 ## 1.Introduction: 引言
 
-> Large-scale diffusion models have demonstrated impressive generative abilities in a wide range of fields including images [1], [2], videos [3], [4], and audio ([WaveGrad](../../Models/TTS3_Vocoder/2020.09.02_WaveGrad.md); [DiffWave](../../Models/TTS3_Vocoder/DiffWave.md)).
+> Large-scale diffusion models have demonstrated impressive generative abilities in a wide range of fields including images [1], [2], videos [3], [4], and audio ([WaveGrad](../../Models/TTS3_Vocoder/2020.09.02_WaveGrad.md); [DiffWave](../TTS3_Vocoder/2020.09.21_DiffWave.md)).
 > The integration of [latent diffusion models (LDMs)](../../Models/_Basis/2021.12.20_LDM.md) further amplifies their popularity [8], [9], [10], as these models significantly enhance computational efficiency.
 > This efficiency is achieved through the reduction of input dimensionality using autoencoders, which also enables the diffusion models to focus on the most critical features of data ([LDM](../../Models/_Basis/2021.12.20_LDM.md)).
 > However, applying LDMs to text-to-speech (TTS) presents unique challenges because TTS requires precise alignment between text and generated speech over time.
 > Hence, their application to TTS often requires a complex pipeline, incorporating speech domain-specific modeling such as phoneme and duration ([Grad-TTS](../../Models/TTS2_Acoustic/2021.05.13_Grad-TTS.md), [NaturalSpeech2](../../Models/Diffusion/2023.04.18_NaturalSpeech2.md)).
-> Without these components, generation performance tends to be suboptimal ([Simple-TTS](../../Models/_tmp/Simple-TTS.md), [E3-TTS](../../Models/_tmp/E3-TTS.md)), while their inclusion hinders the model efficiency and scalability.
+> Without these components, generation performance tends to be suboptimal ([Simple-TTS](../../Models/_tmp/Simple-TTS.md), [E3-TTS](../_tmp/2023.11.02_E3-TTS.md)), while their inclusion hinders the model efficiency and scalability.
 
 > In this work, we present a latent diffusion model for TTS that is integrated with off-the-shelf pre-trained text and speech encoders without relying on the speech domain-specific modeling.
 > Our method addresses the challenge of aligning text and speech solely through cross-attention mechanisms.
@@ -83,7 +83,7 @@
 > ### Large-scale TTS 
 > Recently, large-scale TTS research progresses actively in two main directions: LLM-based autoregressive (AR) TTS and non-autoregressive (Non-AR) TTS.
 > A prominent feature of LLMs is the scalability [16], [17] and their proficiency in zero-shot learning tasks, demonstrating significant capabilities without prior specific training on those tasks [18], [19], [20], [21].
-> Efforts to replicate LLM’s capability in different modalities have shown progress, including vision [22], [23], [24] and audio ([VALL-E](../../Models/Speech_LLM/2023.01.05_VALL-E.md); [AudioLM](../../Models/Speech_LLM/2022.09.07_AudioLM.md); [SPEAR-TTS](../../Models/Speech_LLM/2023.02.07_SPEAR-TTS.md); [Qwen-Audio](../../Models/Speech_LLM/Qwen-Audio.md)).
+> Efforts to replicate LLM’s capability in different modalities have shown progress, including vision [22], [23], [24] and audio ([VALL-E](../../Models/Speech_LLM/2023.01.05_VALL-E.md); [AudioLM](../../Models/Speech_LLM/2022.09.07_AudioLM.md); [SPEAR-TTS](../../Models/Speech_LLM/2023.02.07_SPEAR-TTS.md); [Qwen-Audio](../Speech_LLM/2023.11.14_Qwen-Audio.md)).
 > [VALL-E](../../Models/Speech_LLM/2023.01.05_VALL-E.md) employs [EnCodec](../../Models/Speech_Neural_Codec/2022.10.24_EnCodec.md) for speech-to-token mapping, posing TTS tasks as AR language modeling tasks, thus enabling zero-shot capabilities in the speech domain.
 > [CLaM-TTS](../../Models/Speech_LLM/2024.04.03_CLaM-TTS.md) introduces Mel-VAE to achieve superior token length compression, and enables a language model to predict multiple tokens simultaneously.
 > Although this approach removes the need for cascaded modeling ([VALL-E](../../Models/Speech_LLM/2023.01.05_VALL-E.md)) to manage the number of token streams, their resource-intensive inference processes limit their applications [30].
@@ -92,7 +92,7 @@
 > NaturalSpeech series ([NaturalSpeech2](../../Models/Diffusion/2023.04.18_NaturalSpeech2.md), [NaturalSpeech3](../../Models/Diffusion/2024.03.05_NaturalSpeech3.md)), building upon recent advances in the [Latent Diffusion Model (LDM)](../../Models/_Basis/2021.12.20_LDM.md), incorporate auxiliary modules for controllability of various speech attribute such as content, prosody, and timbre.
 > However, requiring supplementary data beyond speech-transcription pairs hinders scalability.
 > [Simple-TTS](../../Models/_tmp/Simple-TTS.md) simplifies the data preparation and training process by removing auxiliary modules and the need for phoneme-level durations.
-> Similarly, [E3-TTS](../../Models/_tmp/E3-TTS.md) follows this approach but does not utilize a pre-trained latent autoencoder.
+> Similarly, [E3-TTS](../_tmp/2023.11.02_E3-TTS.md) follows this approach but does not utilize a pre-trained latent autoencoder.
 > However, both models have limitations in audio quality and impose a fixed length on the target audio, which is a significant constraint for speech generation.
 
 > ### Latent Diffusion Model (LDM) 
