--- a/Models/E2E/2021.06.11_VITS.md
+++ b/Models/E2E/2021.06.11_VITS.md
@@ -25,7 +25,7 @@
   - [语音合成](../../Tags/SpeechSynthesis.md)
   - [模型-流](../../Tags/Model_Flow.md)
   - [模型-变分自编码器](../../Tags/Model_VAE.md)
-  - [模型-生成对抗网络](../../Tags/GAN.md)
+  - [模型-生成对抗网络](../../Tags/Model_GAN.md)
   - [对抗学习](../../Tags/Learning_Adversarial.md)
   - [开源](../../Tags/OpenSource.md)
 - 页数: 15
