--- a/Models/Speech_LLM/2024.04.03_CLaM-TTS.md
+++ b/Models/Speech_LLM/2024.04.03_CLaM-TTS.md
@@ -10,7 +10,7 @@
   - [Seungjun Chung](../../Authors/Seungjun_Chung.md)
   - [Jaewoong Cho](../../Authors/Jaewoong_Cho.md)
 - 机构:
-  - [KRAFRON](../../Institutions/KRAFRON.AI.md)
+  - [KRAFTON](../../Institutions/KRAFTON.AI.md)
 - 时间:
   - 预印时间: 2024.04.03 ArXiv v1
   - 更新笔记: 2024.06.06
