--- a/Models/TTS2_Acoustic/2017.03.29_Tacotron.md
+++ b/Models/TTS2_Acoustic/2017.03.29_Tacotron.md
@@ -5,7 +5,7 @@
 
 - 标题: Tacotron: Towards End-to-End Speech Synthesis
 - 作者:
- - [Yuxuan Wang](../../Authors/Yuxuan_Wang.md) 
+ - [Yuxuan Wang](../../Authors/Yuxuan_Wang_(王雨轩).md) 
  - [RJ Skerry-Ryan](../../Authors/RJ_Skerry-Ryan.md) 
  - [Daisy Stanton](../../Authors/Daisy_Stanton.md) 
  - [Yonghui Wu](../../Authors/Yonghui_Wu.md) 
@@ -80,7 +80,7 @@
 <details>
 <summary>原文</summary>
 
-> Modern text-to-speech (TTS) pipelines are complex (["Text-to-Speech Synthesis (2009) "]()) .
+> Modern text-to-speech (TTS) pipelines are complex (["Text-to-Speech Synthesis (2009) "](../../Books/2009_Text-to-Speech_Synthesis.md)) .
 > For example, it is common for statistical parametric TTS to have a text frontend extracting various linguistic features, a duration model, an acoustic feature prediction model and a complex signal-processing-based vocoder (["Statistical Parametric Speech Synthesis (2009) "](), ["Vocaine the Vocoder and Applications in Speech Synthesis (2015) "]()) .
 > These components are based on extensive domain expertise and are laborious to design.
 > They are also trained independently, so errors from each component may compound.
