--- a/Models/TTS3_Vocoder/2023.03.01_Vocos.md
+++ b/Models/TTS3_Vocoder/2023.03.01_Vocos.md
@@ -12,13 +12,15 @@
   - 2023.06.01 ArXiv v1
   - 2023.10.03 ArXiv v2
   - 2024.05.29 ArXiv v3
+- 发表:
   - 2024.01.16 [ICLR2024](../../Publications/ICLR.md) Accepted (Poster) 5/8/5/6
 - 链接:
   - [ArXiv](https://arxiv.org/abs/2306.00814)
   - [Demo](https://gemelo-ai.github.io/vocos/)
   - [Github](https://github.com/gemelo-ai/vocos)
 - 标签:
-  - #Vocoder_(声码器)
+  - [声码器](../../Tags/Vocoder.md)
+  - [开源](../../Tags/OpenSource.md)
 - 页数: 15
 - 引用: ?
 - 被引: 11
