--- a/Models/Speech_Neural_Codec/2024.06.11_Single-Codec.md
+++ b/Models/Speech_Neural_Codec/2024.06.11_Single-Codec.md
@@ -5,51 +5,51 @@
 
 - 标题: Single-Codec: Single-Codebook Speech Codec towards High-Performance Speech Generation
 - 作者:
- - 01 [Hanzhao Li](../../Authors/Hanzhao_Li_(李函昭).md)
- - 02 [Liumeng Xue](../../Authors/Liumeng_Xue_(薛浏蒙).md)
- - 03 [Haohan Guo](../../Authors/Haohan_Guo_(郭浩翰).md)
- - 04 [Xinfa Zhu](../../Authors/Xinfa_Zhu_(朱新发).md)
- - 05 [Yuanjun Lv](../../Authors/Yuanjun_Lv_(吕元骏).md)
- - 06 [Lei Xie](../../Authors/Lei_Xie_(谢磊).md)
- - 07 [Yunlin Chen](../../Authors/Yunlin_Chen_(陈云琳).md) 
- - 08 [Hao Yin](../../Authors/Hao_Yin_(殷昊).md)
- - 09 [Zhifei Li](../../Authors/Zhifei_Li_(李志飞).md)
+  - 01 [Hanzhao Li](../../Authors/Hanzhao_Li_(李函昭).md)
+  - 02 [Liumeng Xue](../../Authors/Liumeng_Xue_(薛浏蒙).md)
+  - 03 [Haohan Guo](../../Authors/Haohan_Guo_(郭浩翰).md)
+  - 04 [Xinfa Zhu](../../Authors/Xinfa_Zhu_(朱新发).md)
+  - 05 [Yuanjun Lv](../../Authors/Yuanjun_Lv_(吕元骏).md)
+  - 06 [Lei Xie](../../Authors/Lei_Xie_(谢磊).md)
+  - 07 [Yunlin Chen](../../Authors/Yunlin_Chen_(陈云琳).md) 
+  - 08 [Hao Yin](../../Authors/Hao_Yin_(殷昊).md)
+  - 09 [Zhifei Li](../../Authors/Zhifei_Li_(李志飞).md)
 - 机构:
- - [NPU](../../Institutions/NPU_西北工业大学.md)
- - [香港中文大学 深圳](../../Institutions/CUHK_香港中文大学.md)
- - [香港中文大学](../../Institutions/CUHK_香港中文大学.md)
- - [出门问问 Inc](../../Institutions/Mobvoi_墨百意.md)
+  - [NPU](../../Institutions/NPU_西北工业大学.md)
+  - [香港中文大学 深圳](../../Institutions/CUHK_香港中文大学.md)
+  - [香港中文大学](../../Institutions/CUHK_香港中文大学.md)
+  - [出门问问 Inc](../../Institutions/Mobvoi_墨百意.md)
 - 时间:
- - 预印时间: 2024.06.11 ArXiv v1
- - 更新笔记: 2024.06.20
+  - 预印时间: 2024.06.11 ArXiv v1
+  - 更新笔记: 2024.06.20
 - 发表:
- - [InterSpeech 2024](../../Publications/InterSpeech.md)
+  - [InterSpeech 2024](../../Publications/InterSpeech.md)
 - 链接:
- - [ArXiv](https://www.arxiv.org/abs/2406.07422)
- - [DOI]()
- - [Github]()
- - [Demo](https://kkksuper.github.io/Single-Codec)
- - [Scholar](https://scholar.google.com/scholar?cluster=6055535157486740073)
+  - [ArXiv](https://www.arxiv.org/abs/2406.07422)
+  <!-- - [DOI]() -->
+  <!-- - [Github]() -->
+  - [Demo](https://kkksuper.github.io/Single-Codec)
+  - [Scholar](https://scholar.google.com/scholar?cluster=6055535157486740073)
 - 标签:
- - [编解码器](../../Tags/Codec.md)
+  - [编解码器](../../Tags/Codec.md)
 - 页数: 5
 - 引用: 33
 - 被引: 0
 - 数据:
- - ? 
+  - ? 
 - 对比:
- - [VQ-VAE](../../Models/_Basis/2017.11.02_VQ-VAE.md)
- - [EnCodec](../../Models/Speech_Neural_Codec/2022.10.24_EnCodec.md)
- - [TiCodec](../../Models/Speech_Neural_Codec/TiCodec.md)
+  - [VQ-VAE](../../Models/_Basis/2017.11.02_VQ-VAE.md)
+  - [EnCodec](../../Models/Speech_Neural_Codec/2022.10.24_EnCodec.md)
+  - [TiCodec](../../Models/Speech_Neural_Codec/TiCodec.md)
 - 复现:
- - ?
+  - ?
 
 </details>
 
 ## Abstract: 摘要
 
 > The multi-codebook speech codec enables the application of large language models (LLM) in TTS but bottlenecks efficiency and robustness due to multi-sequence prediction.
-> To avoid this obstacle, we propose Single-Codec, a single-codebook single-sequence codec, which employs a disentangled [VQ-VAE](../_Basis/2017.11.02_VQ-VAE.md) to decouple speech into a time-invariant embedding and a phonetically-rich discrete sequence.
+> To avoid this obstacle, we propose ***Single-Codec***, a single-codebook single-sequence codec, which employs a disentangled [VQ-VAE](../_Basis/2017.11.02_VQ-VAE.md) to decouple speech into a time-invariant embedding and a phonetically-rich discrete sequence.
 > Furthermore, the encoder is enhanced with (1) contextual modeling with a BLSTM module to exploit the temporal information, (2) a hybrid sampling module to alleviate distortion from upsampling and downsampling, and (3) a resampling module to encourage discrete units to carry more phonetic information.
 > Compared with multi-codebook codecs, e.g., [EnCodec](../Speech_Neural_Codec/2022.10.24_EnCodec.md) and [TiCodec](../Speech_Neural_Codec/TiCodec.md), SingleCodec demonstrates higher reconstruction quality with a lower bandwidth of only 304bps.
 > The effectiveness of Single-Code is further validated by LLM-TTS experiments, showing improved naturalness and intelligibility.
@@ -69,18 +69,18 @@
 > Recently, [TiCodec](../Speech_Neural_Codec/TiCodec.md) proposes introducing an additional global encoder to disentangle time-invariant information out of speech units, reducing the amount of frame-level information that needs encoding.
 > It inspires us to re-think speech codec from the perspective of feature disentanglement.
 
-> In this study, we propose a single-codebook neural audio codec, Single-Codec, for high-performance speech generation.
-> Single-Codec performs compression and reconstruction on Mel Spectrogram instead of the raw waveform, enabling efficient compression of speech information while preserving important details, as stated in [Tortoise-TTS](../../Models/_tmp/2023.05.12_TorToise-TTS.md).
-> To further enhance the codec performance and applicability to speech synthesis, Single-Codec incorporates several key components: 
+> In this study, we propose a single-codebook neural audio codec, ***Single-Codec***, for high-performance speech generation.
+> ***Single-Codec*** performs compression and reconstruction on Mel Spectrogram instead of the raw waveform, enabling efficient compression of speech information while preserving important details, as stated in [Tortoise-TTS](../../Models/_tmp/2023.05.12_TorToise-TTS.md).
+> To further enhance the codec performance and applicability to speech synthesis, ***Single-Codec*** incorporates several key components: 
 > - A global reference encoder to decouple time-invariant features.
 > Specifically, we utilize continuous global representations rather than discrete representations and longer reference segments to capture more acoustic details, enabling embedding sufficient phonetic information into single-codebook discrete units.
 > - A BLSTM module for contextual modeling to help discover the correlation between adjacent frames, enhancing speech content clustering efficiency.
 > - A hybrid sampling module that uses both convolution and pooling to achieve downsampling, and transposed convolution and replication to achieve upsampling, alleviating upsampling and downsampling distortion.
 > - A resampling module to encourage the encoder to extract more phonetics-relevant information with lower short-time variance from the acoustic sequence.
 
-> To the best of our knowledge, Single-Codec is the first single-codebook codec dedicatedly designed for LLM-based speech generation.
+> To the best of our knowledge, ***Single-Codec*** is the first single-codebook codec dedicatedly designed for LLM-based speech generation.
 > We comprehensively compare SingleCodec with SOTA multi-codebook codecs, including [EnCodec](../Speech_Neural_Codec/2022.10.24_EnCodec.md) and [TiCodec](../Speech_Neural_Codec/TiCodec.md), by conducting both objective and subjective tests in analysis-synthesis and TTS.
-> The results show that Single-Codec with the lower bandwidth has better speech reconstruction quality, and significantly improves intelligibility, naturalness, and speaker similarity of synthesized speech in zero-shot LLM-TTS.
+> The results show that ***Single-Codec*** with the lower bandwidth has better speech reconstruction quality, and significantly improves intelligibility, naturalness, and speaker similarity of synthesized speech in zero-shot LLM-TTS.
 > Audio samples are available at https://kkksuper.github.io/Single-Codec.
 
 ## 2.Related Works: 相关工作
@@ -89,11 +89,11 @@ None
 
 ## 3.Methodology: 方法
 
-### 3.1.Architecture of Single-Codec: 单码本编解码器架构
+### 3.1.Architecture of ***Single-Codec***: 单码本编解码器架构
 
 ![](Images/2024.06.11_Single-Codec_Fig.01.png)
 
-> The architecture of Single-Codec is shown in [Figure.01](Images/2024.06.11_Single-Codec_Fig.01.png).
+> The architecture of ***Single-Codec*** is shown in [Figure.01](Images/2024.06.11_Single-Codec_Fig.01.png).
 > It is built on [Vector Quantized-Variational AutoEncoder (VQ-VAE)](../_Basis/2017.11.02_VQ-VAE.md) with Mel Spectrogram input and reconstruction, similar to [Tortoise-TTS](../../Models/_tmp/2023.05.12_TorToise-TTS.md).
 > We adopt a [Conformer](../../Models/_Basis/2020.05.16_Conformer.md)-based encoder to encode a Mel Spectrogram segment seg2 into a latent content representation c, which is then passed to the Vector Quantizer (VQ) for vector quantization.
 > The convolution-based decoder reconstructs the Mel Spectrogram ˜seg2 from the quantized content representation c.
@@ -148,10 +148,10 @@ None
 
 ### 4.2.Comparison Models: 对比模型
 
-> We adopt [EnCodec](../Speech_Neural_Codec/2022.10.24_EnCodec.md) with one codebook ([EnCodec](../Speech_Neural_Codec/2022.10.24_EnCodec.md)-1VQ) and [TiCodec](../Speech_Neural_Codec/TiCodec.md) with one codebook ([TiCodec](../Speech_Neural_Codec/TiCodec.md)-1VQ) and two codebooks ([TiCodec](../Speech_Neural_Codec/TiCodec.md)-2VQ) as the baselines to compare with our proposed Single-Codec.
+> We adopt [EnCodec](../Speech_Neural_Codec/2022.10.24_EnCodec.md) with one codebook ([EnCodec](../Speech_Neural_Codec/2022.10.24_EnCodec.md)-1VQ) and [TiCodec](../Speech_Neural_Codec/TiCodec.md) with one codebook ([TiCodec](../Speech_Neural_Codec/TiCodec.md)-1VQ) and two codebooks ([TiCodec](../Speech_Neural_Codec/TiCodec.md)-2VQ) as the baselines to compare with our proposed ***Single-Codec***.
 > For [VALL-E](../../Models/Speech_LLM/2023.01.05_VALL-E.md), we use [EnCodec](../Speech_Neural_Codec/2022.10.24_EnCodec.md) with one, four, and eight codebooks, representing [EnCodec](../Speech_Neural_Codec/2022.10.24_EnCodec.md)-1VQ, [EnCodec](../Speech_Neural_Codec/2022.10.24_EnCodec.md)-4VQ, and [EnCodec](../Speech_Neural_Codec/2022.10.24_EnCodec.md)-8VQ, [TiCodec](../Speech_Neural_Codec/TiCodec.md) with one codebook ([TiCodec](../Speech_Neural_Codec/TiCodec.md)-1VQ) as the baselines to evaluate the performance of codecs on speech synthesis.
 
-> To verify the effectiveness of our designed modules in Single-Codec, we conduct ablation studies on the following models. 
+> To verify the effectiveness of our designed modules in ***Single-Codec***, we conduct ablation studies on the following models. 
 
 > - [VQ-VAE](../_Basis/2017.11.02_VQ-VAE.md): A basic [VQ-VAE](../_Basis/2017.11.02_VQ-VAE.md) codec with a discriminator for perceptual loss, the structure and configuration of the [VQ-VAE](../_Basis/2017.11.02_VQ-VAE.md) codec is similar to that in [Tortoise-TTS](../../Models/_tmp/2023.05.12_TorToise-TTS.md).
 > - Ref-short: [VQ-VAE](../_Basis/2017.11.02_VQ-VAE.md) with a reference encoder that consumes a short segment with 200 frames as input.
@@ -174,7 +174,7 @@ None
 > Discriminator consists of 4 layers of 2D convolution with a kernel size of 5 and 2 layers of 2D convolution with a kernel size of 3.
 > The BLSTM module contains two LSTM layers with a hidden size of 128.
 
-> During training, we conduct 300k iterations using a batch size of 1024 on a single V100 GPU for Single-Codec.
+> During training, we conduct 300k iterations using a batch size of 1024 on a single V100 GPU for ***Single-Codec***.
 > The baseline model [EnCodec](../Speech_Neural_Codec/2022.10.24_EnCodec.md) utilizes with the code reimplemented in [HiFi-Codec](../Speech_Neural_Codec/2023.05.04_HiFi-Codec.md), and is trained for 25 epochs.
 > [TiCodec](../Speech_Neural_Codec/TiCodec.md) is trained for 300k steps with a batch size of 40 on two V100 GPUs.
 > For TTS, we employ [VALL-E](../../Models/Speech_LLM/2023.01.05_VALL-E.md), reimplemented in [Amphion](../../Toolkits/Amphion/2023.12.15_Amphion.md), with dynamic batch sizing and a maximum token limit of 4000 per batch.
@@ -191,7 +191,7 @@ None
 > It indicates that it is effective to decouple global information from speech for the single-codebook codec.
 > Moreover, Ref-long outperforms Ref-short in both reconstruction and speaker similarity, suggesting that longer reference segments help capture more accurate time-invariant information and enhance content modelling.
 > Ref-BLSTM, Ref-HybSam, and Ref-BLSTM-HybSam get higher reconstruction quality, showing the effectiveness of the BLSTM and hybrid sampling modules.
-> Moreover, RefBLSTM-HybSam-Con yields on-pair performance with Ref-BLSTM-HybSam but gets further improvement after adding the resampling module, i.e., our proposed Single-Code, achieving the best results.
+> Moreover, Ref-BLSTM-HybSam-Con yields on-pair performance with Ref-BLSTM-HybSam but gets further improvement after adding the resampling module, i.e., our proposed Single-Code, achieving the best results.
 
 ### 4.5.Commitment Loss Analysis: 承诺损失分析
 
@@ -212,14 +212,14 @@ None
 
 ### 4.6.Speech reconstruction Evaluation: 语音重建评估
 
-> We compare the performance in speech reconstruction of the proposed Single-Codec with other codecs.
-> The results, as presented in Table 1, demonstrate that despite lower bandwidth, the proposed Single-Codec surpasses other codecs with 1 codebook and is on par with the [TiCodec](../Speech_Neural_Codec/TiCodec.md) with 2 codebooks in terms of reconstruction quality and speaker similarity.
+> We compare the performance in speech reconstruction of the proposed ***Single-Codec*** with other codecs.
+> The results, as presented in Table 1, demonstrate that despite lower bandwidth, the proposed ***Single-Codec*** surpasses other codecs with 1 codebook and is on par with the [TiCodec](../Speech_Neural_Codec/TiCodec.md) with 2 codebooks in terms of reconstruction quality and speaker similarity.
 > [VQ-VAE](../_Basis/2017.11.02_VQ-VAE.md) performs better than [EnCodec](../Speech_Neural_Codec/2022.10.24_EnCodec.md) with 1 codebook, demonstrating the high quantization efficiency of codecs operated on Mel Spectrogram.
-> Compared to [TiCodec](../Speech_Neural_Codec/TiCodec.md), which also quantized the decoupled time-invariant information, Single-Codec achieves higher speaker similarity and reconstruction quality, indicating the effectiveness of continuous time-invariant representations and longer reference length.
+> Compared to [TiCodec](../Speech_Neural_Codec/TiCodec.md), which also quantized the decoupled time-invariant information, ***Single-Codec*** achieves higher speaker similarity and reconstruction quality, indicating the effectiveness of continuous time-invariant representations and longer reference length.
 
 ### 4.7.Zero-Shot TTS Evaluation: 零样本文本转语音评估
 
-> To evaluate the performance of codecs applied in speech synthesis tasks, we train [VALL-E](../../Models/Speech_LLM/2023.01.05_VALL-E.md) using discrete tokens extracted from [EnCodec](../Speech_Neural_Codec/2022.10.24_EnCodec.md) in the number of 1,4,8 codebooks, [TiCodec](../Speech_Neural_Codec/TiCodec.md) in 1 codebook, and Single-Codec.
+> To evaluate the performance of codecs applied in speech synthesis tasks, we train [VALL-E](../../Models/Speech_LLM/2023.01.05_VALL-E.md) using discrete tokens extracted from [EnCodec](../Speech_Neural_Codec/2022.10.24_EnCodec.md) in the number of 1,4,8 codebooks, [TiCodec](../Speech_Neural_Codec/TiCodec.md) in 1 codebook, and ***Single-Codec***.
 > We conduct naturalness Mean Opinion Score (N-MOS) and speaker similarity MOS (S-MOS) for subjective evaluation of the synthesized speech.
 > The test set consists of 30 sentences, including Chinese and English speech.
 > The 20 listeners who are Chinese Mandarin native speakers and familiar to English are invited to participate in each MOS test.
@@ -228,18 +228,17 @@ None
 
 > Table 2 shows the subjective and objective results.
 > SingleCodec outperforms other models in terms of naturalness and speaker similarity.
-> In single-codebook scenes, [TiCodec](../Speech_Neural_Codec/TiCodec.md)-1VQ and Single-Codec are significantly better than other codec models in speaker similarity, naturalness, and stability.
+> In single-codebook scenes, [TiCodec](../Speech_Neural_Codec/TiCodec.md)-1VQ and ***Single-Codec*** are significantly better than other codec models in speaker similarity, naturalness, and stability.
 > This is because decoupling global information makes the frame-level codebook pay more attention to content modelling and enables more global information transmission.
 > Meanwhile, SingleCodec performs better than [TiCodec](../Speech_Neural_Codec/TiCodec.md), indicating the effectiveness of continuous global representation and additional content modelling.
-> In addition, Single-Codec exceeds multiple-codebook codecs regarding speaker similarity and naturalness while WER is slightly higher than [EnCodec](../Speech_Neural_Codec/2022.10.24_EnCodec.md)-8VQ.
+> In addition, ***Single-Codec*** exceeds multiple-codebook codecs regarding speaker similarity and naturalness while WER is slightly higher than [EnCodec](../Speech_Neural_Codec/2022.10.24_EnCodec.md)-8VQ.
 > This is mainly because the higher bandwidth brings higher-resolution speech unit perception.
 
 ## 5.Conclusions: 结论
 
-> In this paper, we propose Single-Codec, the first single-codebook codec dedicatedly designed for LLM-based speech generation.
-> Single-Codec employs a disentangled [VQ-VAE](../_Basis/2017.11.02_VQ-VAE.md) on Mel Spectrograms to decouple speech into time-invariant global embedding and one phonetically-rich discrete sequence quantized by one codebook.
+> In this paper, we propose ***Single-Codec***, the first single-codebook codec dedicatedly designed for LLM-based speech generation.
+> ***Single-Codec*** employs a disentangled [VQ-VAE](../_Basis/2017.11.02_VQ-VAE.md) on Mel Spectrograms to decouple speech into time-invariant global embedding and one phonetically-rich discrete sequence quantized by one codebook.
 > Furthermore, the encoder is enhanced with a BLSTM module for contextual modelling, a hybrid sampling module to alleviate distortion from upsampling and downsampling, and a resampling module to encourage discrete units to carry more phonetic-relevant information with lower short-time variance.
-> In experiments, compared with multi-codebook codecs, e.g.
-> [EnCodec](../Speech_Neural_Codec/2022.10.24_EnCodec.md) and [TiCodec](../Speech_Neural_Codec/TiCodec.md), Single-Codec demonstrates higher speech reconstruction quality with lower bandwidth of only 304bps, and enables a higher-quality LLM-TTS with better naturalness and intelligibility.
+> In experiments, compared with multi-codebook codecs, e.g. [EnCodec](../Speech_Neural_Codec/2022.10.24_EnCodec.md) and [TiCodec](../Speech_Neural_Codec/TiCodec.md), ***Single-Codec*** demonstrates higher speech reconstruction quality with lower bandwidth of only 304bps, and enables a higher-quality LLM-TTS with better naturalness and intelligibility.
 > In the future, we will focus on developing a more efficient single-codebook codec for speech reconstruction and speech synthesis.
 
