--- a/Models/Singing_Voice/2024.06.12_TokSing.md
+++ b/Models/Singing_Voice/2024.06.12_TokSing.md
@@ -97,7 +97,7 @@
 > In this study, we focus on addressing the above two challenges: finding suitable token formulations for singing and constructing a discrete token-based SVS system that meets the demands of melody expression.
 > Firstly, we introduce a method for formulating tokens tailored to singing tasks and provide various flexible formulation strategies.
 > Due to the diversity in pretraining tasks and datasets, different SSL models can offer valuable insights into singing semantics and acoustics, potentially providing complementary benefits to each other.
-> Additionally, drawing from past research ([WavLM](../../Models/Speech_Representaion/2021.10.26_WavLM.md); [SUPERB](../../Evaluations/SUPERB.md); [Multi-Resolution_HuBERT](../Speech_Representaion/2023.10.04_Multi-Resolution_HuBERT.md)), it is evident that the influence of various intermediate layers in an SSL model differs across downstream tasks.
+> Additionally, drawing from past research ([WavLM](../../Models/Speech_Representaion/2021.10.26_WavLM.md); [SUPERB](../../Evaluations/SUPERB.md); [Multi-Resolution_HuBERT](../Speech_Representaion/2023.10.04_MR-HuBERT.md)), it is evident that the influence of various intermediate layers in an SSL model differs across downstream tasks.
 > This suggests a distribution of diverse knowledge across the layers.
 > Based on the above reasons, we propose a token formulator that allows token blending across different models and layers.
 > Secondly, for the discrete SVS system, we incorporate melody control signals to enhance the generated melody expression.
@@ -113,7 +113,7 @@
 在本研究中, 我们专注于解决上述两个挑战：为歌唱任务找到合适的标识符构成方法, 并构建一个满足旋律表达需求的基于离散标识符的SVS系统.
 首先, 我们引入了一种为歌唱任务量身定制的标识符构成方法, 并提供了多种灵活的构成策略.
 由于预训练任务和数据集的多样性, 不同的SSL模型可以为歌唱语义和声学提供宝贵的见解, 可能相互提供互补的好处.
-此外, 借鉴过去的研究 ([WavLM](../../Models/Speech_Representaion/2021.10.26_WavLM.md)；[SUPERB](../../Evaluations/SUPERB.md)；[Multi-Resolution_HuBERT](../Speech_Representaion/2023.10.04_Multi-Resolution_HuBERT.md)) , 很明显, SSL模型中不同中间层对下游任务的影响各不相同.
+此外, 借鉴过去的研究 ([WavLM](../../Models/Speech_Representaion/2021.10.26_WavLM.md)；[SUPERB](../../Evaluations/SUPERB.md)；[Multi-Resolution_HuBERT](../Speech_Representaion/2023.10.04_MR-HuBERT.md)) , 很明显, SSL模型中不同中间层对下游任务的影响各不相同.
 这表明知识在层间分布多样.
 基于上述原因, 我们提出了一种标识符构成器, 允许跨不同模型和层的标识符混合.
 其次, 对于离散SVS系统, 我们整合了旋律控制信号以增强生成的旋律表达.
@@ -159,7 +159,7 @@
 > [SoundStream](../../Models/Speech_Neural_Codec/2021.07.07_SoundStream.md) introduces a residual vector quantizer (RVQ) and can reconstruct audios from multi-layer Codec tokens with Codec decoder.
 > The other way involves quantizing tokens through clustering the hidden embeddings of SSL models.
 > The pre-training task and the corpus of these models directly influence token generation.
-> Previous research on speech understanding tasks ([WavLM](../../Models/Speech_Representaion/2021.10.26_WavLM.md); [Multi-Resolution_HuBERT](../Speech_Representaion/2023.10.04_Multi-Resolution_HuBERT.md); [MMM](../../Models/_tmp/MMM.md)) suggests that different hidden layers contain diverse information suitable for various downstream tasks, with shallow layers focusing more on identity and deeper layers on content-related features.
+> Previous research on speech understanding tasks ([WavLM](../../Models/Speech_Representaion/2021.10.26_WavLM.md); [Multi-Resolution_HuBERT](../Speech_Representaion/2023.10.04_MR-HuBERT.md); [MMM](../../Models/_tmp/MMM.md)) suggests that different hidden layers contain diverse information suitable for various downstream tasks, with shallow layers focusing more on identity and deeper layers on content-related features.
 > We leverage and compare these tokens for SVS task.
 
 </details>
@@ -170,7 +170,7 @@
 [SoundStream](../../Models/Speech_Neural_Codec/2021.07.07_SoundStream.md)引入了残差向量量化器 (RVQ) , 并能够从多层编解码器标识符中通过编解码器解码器重建音频.
 另一种方法涉及通过聚类SSL模型的隐藏嵌入来量化标识符.
 这些模型的预训练任务和语料库直接影响标识符的生成.
-先前关于语音理解任务的研究 ([WavLM](../../Models/Speech_Representaion/2021.10.26_WavLM.md)；[Multi-Resolution_HuBERT](../Speech_Representaion/2023.10.04_Multi-Resolution_HuBERT.md)；[MMM](../../Models/_tmp/MMM.md)) 表明, 不同的隐藏层包含适合各种下游任务的多样化信息, 其中浅层更多关注身份特征, 而深层更多关注与内容相关的特征.
+先前关于语音理解任务的研究 ([WavLM](../../Models/Speech_Representaion/2021.10.26_WavLM.md)；[Multi-Resolution_HuBERT](../Speech_Representaion/2023.10.04_MR-HuBERT.md)；[MMM](../../Models/_tmp/MMM.md)) 表明, 不同的隐藏层包含适合各种下游任务的多样化信息, 其中浅层更多关注身份特征, 而深层更多关注与内容相关的特征.
 我们利用并比较这些标识符用于SVS任务.
 
 <details>
@@ -273,7 +273,7 @@ SVS需要遵循乐谱指定的时序变化, 这要求在持续时间预测方面
 > #### Token Formulation: 
 > To acquire suitable token sources, we conduct resynthesis experiments across different hidden layers of various SSL models, aggregating them with a weighted sum approach.
 > We select layers with higher weights as token sources for the following experiments.
-> Eventually, the 6th and 23rd layers of the WavLM-large2 model, as well as the 6th layer of the HuBERT-large model3 are chosen, which also exhibit strong performance in speech understanding tasks ([SUPERB](../../Evaluations/SUPERB.md); [Multi-Resolution_HuBERT](../Speech_Representaion/2023.10.04_Multi-Resolution_HuBERT.md)).
+> Eventually, the 6th and 23rd layers of the WavLM-large2 model, as well as the 6th layer of the HuBERT-large model3 are chosen, which also exhibit strong performance in speech understanding tasks ([SUPERB](../../Evaluations/SUPERB.md); [Multi-Resolution_HuBERT](../Speech_Representaion/2023.10.04_MR-HuBERT.md)).
 > Additionally, setting the optimal number of clustering centers can be influenced by the phoneme inventory of the language and the number of singers involved.
 > We compare the performance across exponential powers of 2 ranging from 32 to 1024.
 > Ultimately, we set the number of clustering centers to 128 for the single-singer dataset and 1024 for the multi-singer dataset.
@@ -312,7 +312,7 @@ SVS需要遵循乐谱指定的时序变化, 这要求在持续时间预测方面
 该数据集涵盖了30位具有不同性别和声乐风格的歌手, 总时长约为150小时.
 标识符构成：为了获得合适的标识符来源, 我们进行了跨不同SSL模型隐藏层的重新合成实验, 并采用加权求和方法进行聚合.
 我们选择权重较高的层作为以下实验的标识符来源.
-最终, 选择了WavLM-large2模型的第6层和第23层, 以及HuBERT-large模型的第6层, 这些层在语音理解任务中也表现出强大的性能 ([SUPERB](../../Evaluations/SUPERB.md)；[Multi-Resolution_HuBERT](../Speech_Representaion/2023.10.04_Multi-Resolution_HuBERT.md)) .
+最终, 选择了WavLM-large2模型的第6层和第23层, 以及HuBERT-large模型的第6层, 这些层在语音理解任务中也表现出强大的性能 ([SUPERB](../../Evaluations/SUPERB.md)；[Multi-Resolution_HuBERT](../Speech_Representaion/2023.10.04_MR-HuBERT.md)) .
 此外, 设置最佳的聚类中心数量可能会受到语言的音素库存和涉及的歌手数量的影响.
 我们比较了从32到1024的指数2的幂次的表现.
 最终, 我们为单歌手数据集设置了128个聚类中心, 为多歌手数据集设置了1024个聚类中心.
