--- a/Models/Speech_LLM/2024.01.25_VALL-T.md
+++ b/Models/Speech_LLM/2024.01.25_VALL-T.md
@@ -5,15 +5,15 @@
 
 - 标题: VALL-T: Decoder-Only Generative Transducer for Robust and Decoding-Controllable Text-to-Speech
 - 作者:
-  - [Chenpeng Du](../../Authors/Chenpeng_Du.md)
-  - [Yiwei Guo](../../Authors/Yiwei_Guo.md)
-  - [Hankun Wang](../../Authors/Hankun_Wang.md)
-  - [Yifan Yang](../../Authors/Yifan_Yang.md)
-  - [Zhikang Niu](../../Authors/Zhikang_Niu.md)
-  - [Shuai Wang](../../Authors/Shuai_Wang.md)
-  - [Hui Zhang](../../Authors/Hui_Zhang.md)
-  - [Xie Chen](../../Authors/Xie_Chen_(陈谐).md)
-  - [Kai Yu](../../Authors/Kai_Yu_(俞凯).md)
+  - 01 [Chenpeng Du](../../Authors/Chenpeng_Du.md)
+  - 02 [Yiwei Guo](../../Authors/Yiwei_Guo.md)
+  - 03 [Hankun Wang](../../Authors/Hankun_Wang.md)
+  - 04 [Yifan Yang](../../Authors/Yifan_Yang.md)
+  - 05 [Zhikang Niu](../../Authors/Zhikang_Niu.md)
+  - 06 [Shuai Wang](../../Authors/Shuai_Wang_(王帅).md)
+  - 07 [Hui Zhang](../../Authors/Hui_Zhang.md)
+  - 08 [Xie Chen](../../Authors/Xie_Chen_(陈谐).md)
+  - 09 [Kai Yu](../../Authors/Kai_Yu_(俞凯).md)
 - 机构:
   - [上海交通大学](../../Institutions/SJTU_上海交通大学.md)
 - 时间:
