--- a/Models/TTS2_Acoustic/2020.05.22_Glow-TTS.md
+++ b/Models/TTS2_Acoustic/2020.05.22_Glow-TTS.md
@@ -5,10 +5,10 @@
 
 - 标题: Glow-TTS: A Generative Flow for Text-to-Speech via Monotonic Alignment Search
 - 作者:
-  - [Jaehyeon Kim](../../Authors/Jaehyeon_Kim.md)
-  - [Sungwon Kim](../../Authors/Sungwon_Kim.md)
-  - [Jungil Kong](../../Authors/Jungil_Kong.md)
-  - [Sungroh Yoon](../../Authors/Sungroh_Yoon.md)
+  - 01 [Jaehyeon Kim](../../Authors/Jaehyeon_Kim.md)
+  - 02 [Sungwon Kim](../../Authors/Sungwon_Kim.md)
+  - 03 [Jungil Kong](../../Authors/Jungil_Kong.md)
+  - 04 [Sungroh Yoon](../../Authors/Sungroh_Yoon.md)
 - 机构:
   - [Kakao Enterprise](../../Institutions/KakaoEnterprise.md)
   - [Seoul National University](../../Institutions/SeoulNationalUniversity.md)
@@ -230,7 +230,7 @@ $$
 > We follow the configuration for the mel-spectrogram of [WaveGlow](../../Models/TTS3_Vocoder/2018.10.31_WaveGlow.md), and all the generated mel-spectrograms from both models are transformed to raw waveforms through the pre-trained vocoder, [WaveGlow](../../Models/TTS3_Vocoder/2018.10.31_WaveGlow.md).
 
 > During training, we simply set the standard deviation \sigma of the learnable prior to be a constant 1.
-> ***Glow-TTS*** was trained for 240K iterations using the [Adam optimizer](../../Models/_Basis/Adam.md) with the Noam learning rate schedule ([Transformer](../../Models/_Basis/2017.06.12_Transformer.md)).
+> ***Glow-TTS*** was trained for 240K iterations using the [Adam optimizer](../_Basis/2014.12.22_Adam.md) with the Noam learning rate schedule ([Transformer](../../Models/_Basis/2017.06.12_Transformer.md)).
 > This required only 3 days with mixed precision training on two NVIDIA V100 GPUs.
 
 > To train muli-speaker ***Glow-TTS***, we add the speaker embedding and increase the hidden dimension.
