--- a/Models/Diffusion/2024.06.04_SimpleSpeech.md
+++ b/Models/Diffusion/2024.06.04_SimpleSpeech.md
@@ -5,12 +5,12 @@
 
 - 标题: SimpleSpeech: Towards Simple and Efficient Text-to-Speech with Scalar Latent Transformer Diffusion Models
 - 作者:
-  - [Dongchao Yang](../../Authors/Dongchao_Yang_(杨东超).md)
-  - [Dongdong Wang](../../Authors/Dingdong_Wang.md)
-  - [Haohan Guo](../../Authors/Haohan_Guo.md)
-  - [Xueyuan Chen](../../Authors/Xueyuan_Chen.md)
-  - [Xixin Wu](../../Authors/Xixin_Wu.md)
-  - [Helen Meng](../../Authors/Helen_Meng_(蒙美玲).md)
+  - 01 [Dongchao Yang](../../Authors/Dongchao_Yang_(杨东超).md)
+  - 02 [Dongdong Wang](../../Authors/Dingdong_Wang.md)
+  - 03 [Haohan Guo](../../Authors/Haohan_Guo_(郭浩翰).md)
+  - 04 [Xueyuan Chen](../../Authors/Xueyuan_Chen.md)
+  - 05 [Xixin Wu](../../Authors/Xixin_Wu.md)
+  - 06 [Helen Meng](../../Authors/Helen_Meng_(蒙美玲).md)
 - 机构:
   - [香港中文大学](../../Institutions/CUHK_香港中文大学.md)
 - 时间:
